namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-esupervision-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-esupervision-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "stg-pathfinders-dev"
    cloud-platform.justice.gov.uk/application: "Check in with your probation officer"
    cloud-platform.justice.gov.uk/owner: "Technology for Community Offender Management Pathfinder: techforcom@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-esupervision-api"
    cloud-platform.justice.gov.uk/team-name: "stg-pathfinders"
    cloud-platform.justice.gov.uk/review-after: ""
